# services/account/core/interfaces/responses/swagger.go
@@ -1,0 +1,8 @@
+package responses
+
+// ApiResponse defines a generic API response structure for Swagger documentation.
+type ApiResponse struct {
+	Message string      `json:"message"`
+	Data    interface{} `json:"data,omitempty"`
+	Error   string      `json:"error,omitempty"`
+}
