# services/account/docs/swagger.yaml
@@ -1,5 +1,404 @@
 basePath: /api/v1
 definitions:
+  models.Activity:
+    properties:
+      createdAt:
+        type: string
+      deletedAt:
+        description: Nullable for soft deletes
+        type: string
+      details:
+        description: Additional details about the activity
+        type: string
+      id:
+        description: Unique identifier for the activity
+        type: integer
+      ipAddress:
+        description: IP address from which the activity was performed
+        type: string
+      type:
+        description: Type of activity (e.g., "login", "logout", "update_profile")
+        type: string
+      updatedAt:
+        type: string
+      user:
+        allOf:
+        - $ref: '#/definitions/models.User'
+        description: Belongs to User
+      userAgent:
+        description: User agent string for the activity
+        type: string
+      userId:
+        description: Reference to the user associated with the activity
+        type: integer
+    type: object
+  models.AuthInfo:
+    properties:
+      createdAt:
+        type: string
+      deletedAt:
+        type: string
+      id:
+        type: integer
+      lastLoginAt:
+        description: User            User       `gorm:"constraint:OnUpdate:CASCADE,OnDelete:SET
+          NULL;"` // Belongs to User
+        type: string
+      lockedReason:
+        type: string
+      lockedUntil:
+        description: Timestamp until which the user is locked out
+        type: string
+      loginAttempts:
+        description: Number of login attempts
+        type: integer
+      otpCooldownUntil:
+        description: Timestamp until which the user is cooled down from requesting
+          OTP
+        type: string
+      otpRequestCount:
+        description: Number of OTP requests
+        type: integer
+      updatedAt:
+        type: string
+      userID:
+        description: Unique identifier for the user
+        type: integer
+    type: object
+  models.Business:
+    properties:
+      additionalDocs:
+        items:
+          type: string
+        type: array
+      createdAt:
+        type: string
+      facebook:
+        type: string
+      id:
+        type: integer
+      industry:
+        type: string
+      instagram:
+        type: string
+      linkedIn:
+        type: string
+      name:
+        type: string
+      registrationDoc:
+        description: URL to the document
+        type: string
+      registrationNumber:
+        type: string
+      twitter:
+        type: string
+      type:
+        description: e.g., "LLC", "Sole Proprietorship"
+        type: string
+      updatedAt:
+        type: string
+      userId:
+        type: integer
+      website:
+        type: string
+    type: object
+  models.ContactInfo:
+    properties:
+      address:
+        type: string
+      city:
+        type: string
+      country:
+        type: string
+      id:
+        type: integer
+      postalCode:
+        type: string
+      state:
+        type: string
+      user:
+        allOf:
+        - $ref: '#/definitions/models.User'
+        description: Belongs to User
+      userId:
+        type: integer
+    type: object
+  models.KYC:
+    properties:
+      createdAt:
+        type: string
+      document:
+        description: base64 or URL to document
+        type: string
+      id:
+        type: integer
+      kycType:
+        description: e.g., "passport", "nationalID"
+        type: string
+      status:
+        description: '"pending", "approved", "rejected"'
+        type: string
+      updatedAt:
+        type: string
+      userId:
+        description: remove uniqueIndex, keep index for performance
+        type: integer
+    type: object
+  models.OTP:
+    properties:
+      code:
+        type: string
+      createdAt:
+        type: string
+      expiresAt:
+        type: string
+      forWhat:
+        description: e.g., "register", "login", "setPin", "updatePin"
+        type: string
+      id:
+        type: integer
+      userId:
+        type: integer
+      verified:
+        type: boolean
+      via:
+        description: sms, email, whatsapp
+        type: string
+    type: object
+  models.Permission:
+    properties:
+      createdAt:
+        type: string
+      id:
+        type: integer
+      name:
+        description: e.g., "read_account", "edit_user"
+        type: string
+      updatedAt:
+        type: string
+    type: object
+  models.Person:
+    properties:
+      address:
+        type: string
+      city:
+        type: string
+      country:
+        type: string
+      dateOfBirth:
+        type: string
+      firstName:
+        type: string
+      gender:
+        type: string
+      id:
+        type: integer
+      lastName:
+        type: string
+      middleName:
+        type: string
+      otherNames:
+        items:
+          type: string
+        type: array
+      postalCode:
+        type: string
+      state:
+        type: string
+      userID:
+        description: Make sure only one Person per User
+        type: integer
+    type: object
+  models.Preference:
+    properties:
+      createdAt:
+        type: string
+      deletedAt:
+        description: Nullable for soft deletes
+        type: string
+      id:
+        description: Unique identifier for the preference
+        type: integer
+      language:
+        description: e.g., "en", "fr", etc.
+        type: string
+      notificationsEnabled:
+        description: Indicates if notifications are enabled
+        type: boolean
+      theme:
+        description: e.g., "light", "dark"
+        type: string
+      timezone:
+        description: e.g., "UTC", "America/New_York"
+        type: string
+      updatedAt:
+        type: string
+      userId:
+        type: integer
+    type: object
+  models.Role:
+    properties:
+      createdAt:
+        type: string
+      description:
+        description: Description of the role
+        type: string
+      id:
+        type: integer
+      name:
+        description: e.g., "admin", "user"
+        type: string
+      permissions:
+        items:
+          $ref: '#/definitions/models.Permission'
+        type: array
+      updatedAt:
+        type: string
+    type: object
+  models.Session:
+    properties:
+      createdAt:
+        type: string
+      currentSessionID:
+        description: Token for the current session
+        type: string
+      expiresAt:
+        description: Expiration time for the session
+        type: string
+      id:
+        type: integer
+      lastKnownIp:
+        description: Last known IP address of the user
+        type: string
+      lastUserAgent:
+        description: User agent string for the session
+        type: string
+      updatedAt:
+        type: string
+      user:
+        allOf:
+        - $ref: '#/definitions/models.User'
+        description: Belongs to User
+      userId:
+        description: Reference to the user associated with the session
+        type: integer
+    type: object
+  models.User:
+    properties:
+      accountType:
+        description: individual or business
+        type: string
+      activities:
+        description: List of activities performed by the user
+        items:
+          $ref: '#/definitions/models.Activity'
+        type: array
+      authInfo:
+        allOf:
+        - $ref: '#/definitions/models.AuthInfo'
+        description: Authentication-related information
+      biometricEnabled:
+        type: boolean
+      biometricID:
+        description: Unique identifier for biometrics (e.g., Device ID + Biometric
+          Hash)
+        type: string
+      business:
+        allOf:
+        - $ref: '#/definitions/models.Business'
+        description: Business-related information (if accountType is business)
+      contact:
+        description: Contact information for the user
+        items:
+          $ref: '#/definitions/models.ContactInfo'
+        type: array
+      createdAt:
+        type: string
+      deletedAt:
+        type: string
+      email:
+        type: string
+      emailVerified:
+        description: Indicates if the user's email is verified
+        type: boolean
+      hashedNIN:
+        description: Hashed version of the user's NIN for security
+        type: string
+      id:
+        type: integer
+      isFirstTime:
+        description: Indicates if this is the user's first login
+        type: boolean
+      kycs:
+        description: List of KYC documents associated with the user
+        items:
+          $ref: '#/definitions/models.KYC'
+        type: array
+      otps:
+        description: List of OTPs associated with the user
+        items:
+          $ref: '#/definitions/models.OTP'
+        type: array
+      person:
+        allOf:
+        - $ref: '#/definitions/models.Person'
+        description: One-to-one link
+      phone:
+        type: string
+      phoneVerified:
+        description: Indicates if the user's phone number is verified
+        type: boolean
+      pin:
+        description: Hashed version of the user's PIN for security
+        type: string
+      preferences:
+        allOf:
+        - $ref: '#/definitions/models.Preference'
+        description: User preferences
+      profile_pic:
+        description: URL to the user's profile picture
+        type: string
+      roles:
+        items:
+          $ref: '#/definitions/models.Role'
+        type: array
+      sessions:
+        description: List of active sessions for the user
+        items:
+          $ref: '#/definitions/models.Session'
+        type: array
+      status:
+        description: e.g., "active", "inactive", etc.
+        type: string
+      twoFactorEnabled:
+        description: Indicates if two-factor authentication is enabled
+        type: boolean
+      twoFactorMethod:
+        description: Method of two-factor authentication (e.g., "sms", "email", "app")
+        type: string
+      twoFactorSecret:
+        description: Secret for two-factor authentication
+        type: string
+      uid:
+        type: string
+      updatedAt:
+        type: string
+      username:
+        maxLength: 30
+        minLength: 3
+        type: string
+    required:
+    - email
+    - username
+    type: object
+  responses.ApiResponse:
+    properties:
+      data: {}
+      error:
+        type: string
+      message:
+        type: string
+    type: object
   validators.AuthDto:
     properties:
       accountType:
@@ -41,7 +440,8 @@ definitions:
         enum:
         - completeRegister
         - login
-        - resetPassword
+        - setPin
+        - updatePin
         - twoFactorAuth
         type: string
       phone:
@@ -50,6 +450,16 @@ definitions:
         type: string
     required:
     - forWhat
+    type: object
+  validators.SetPinDto:
+    properties:
+      confirmPin:
+        type: string
+      pin:
+        type: string
+    required:
+    - confirmPin
+    - pin
     type: object
   validators.UpdateBusinessDocsDto:
     properties:
@@ -85,6 +495,19 @@ definitions:
       website:
         type: string
     type: object
+  validators.UpdatePinDto:
+    properties:
+      confirmPin:
+        type: string
+      newPin:
+        type: string
+      oldPin:
+        type: string
+    required:
+    - confirmPin
+    - newPin
+    - oldPin
+    type: object
   validators.VerifyAuthOtpDto:
     properties:
       otp:
@@ -115,7 +538,8 @@ definitions:
         enum:
         - completeRegister
         - login
-        - resetPassword
+        - setPin
+        - updatePin
         - twoFactorAuth
         type: string
       otp:
@@ -129,7 +553,6 @@ definitions:
   validators.VerifyNINDto:
     properties:
       nin:
-        minLength: 10
         type: string
     required:
     - nin
@@ -148,6 +571,91 @@ info:
   title: PayGidi Account Service API
   version: "1.0"
 paths:
+  /account:
+    delete:
+      consumes:
+      - application/json
+      description: Delete the authenticated user's account and all associated data.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Account deleted successfully
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - ApiKeyAuth: []
+      summary: Delete account
+      tags:
+      - Account
+    get:
+      consumes:
+      - application/json
+      description: Get the profile details of the authenticated user.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Account details
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - ApiKeyAuth: []
+      summary: Get account details
+      tags:
+      - Account
+  /account/pin:
+    post:
+      consumes:
+      - application/json
+      description: Set a new PIN for the authenticated user. Only works if no PIN
+        is currently set.
+      parameters:
+      - description: PIN data
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/validators.SetPinDto'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: PIN set successfully
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - ApiKeyAuth: []
+      summary: Set account PIN
+      tags:
+      - Account
+    put:
+      consumes:
+      - application/json
+      description: Update the existing PIN for the authenticated user.
+      parameters:
+      - description: PIN update data
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/validators.UpdatePinDto'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: PIN updated successfully
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - ApiKeyAuth: []
+      summary: Update account PIN
+      tags:
+      - Account
   /auth:
     post:
       consumes:
@@ -571,4 +1079,35 @@ paths:
       summary: Health Check
       tags:
       - Health
+  /me:
+    get:
+      consumes:
+      - application/json
+      description: Fetch the profile details and associations of the authenticated
+        user.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Current user details
+          schema:
+            allOf:
+            - $ref: '#/definitions/responses.ApiResponse'
+            - properties:
+                data:
+                  $ref: '#/definitions/models.User'
+              type: object
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/responses.ApiResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/responses.ApiResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Get current user
+      tags:
+      - Account
 swagger: "2.0"
