# services/account/models/business.go
@@ -2,8 +2,6 @@ package models
 
 import (
 	"time"
-
-	"github.com/lib/pq"
 )
 
 type Business struct {
@@ -12,16 +10,16 @@ type Business struct {
 	Name               string    `json:"name"`
 	RegistrationNumber string    `json:"registrationNumber"`
 	Type               string    `json:"type"` // e.g., "LLC", "Sole Proprietorship"
-	Industry           string         `json:"industry"`
-	Website            string         `json:"website,omitempty"`
-	Instagram          string         `json:"instagram,omitempty"`
-	Twitter            string         `json:"twitter,omitempty"`
-	LinkedIn           string         `json:"linkedIn,omitempty"`
-	Facebook           string         `json:"facebook,omitempty"`
-	RegistrationDoc    string         `json:"registrationDoc,omitempty"` // URL to the document
-	AdditionalDocs     pq.StringArray `json:"additionalDocs" gorm:"type:text[]"`
-	CreatedAt          time.Time      `json:"createdAt"`
-	UpdatedAt          time.Time      `json:"updatedAt"`
+	Industry           string    `json:"industry"`
+	Website            string    `json:"website,omitempty"`
+	Instagram          string    `json:"instagram,omitempty"`
+	Twitter            string    `json:"twitter,omitempty"`
+	LinkedIn           string    `json:"linkedIn,omitempty"`
+	Facebook           string    `json:"facebook,omitempty"`
+	RegistrationDoc    string    `json:"registrationDoc,omitempty"` // URL to the document
+	AdditionalDocs     []string  `json:"additionalDocs" gorm:"type:text[]"`
+	CreatedAt          time.Time `json:"createdAt"`
+	UpdatedAt          time.Time `json:"updatedAt"`
 }
 
 func (Business) TableName() string {
